<resources>
    <string name="app_name">Profiler</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="hint_email">mail@example.com</string>
    <string name="prompt_password">Password</string>
    <string name="hint_password">123456</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="header_create">New Account</string>
    <string name="prompt_name">Name</string>
    <string name="hint_username">example</string>
    <string name="prompt_create_account">Create Account</string>
</resources>
